# iSpan_LLM-One-Piece

./: .cursorrules  .gitignore  CLAUDE.md  README.md  data_structure.md  instruction_to_LLM.md
.claude/: CLAUDE.md
00-Course_Setup/: INSTALL_NOTES.md  README.md  pyproject.toml
00-LLM_Fundamentals/: LEARNING_PATH.md  MODEL_COMPRESSION_ENGINEERING.md  README.md  STRUCTURE.md
00-LLM_Fundamentals/01-Theory/01-LLM_Lifecycle/: README.md
00-LLM_Fundamentals/01-Theory/02-Evaluation_Metrics/: README.md
00-LLM_Fundamentals/01-Theory/03-Dataset_Types/: README.md
00-LLM_Fundamentals/01-Theory/04-Quantization_Landscape/: README.md
00-LLM_Fundamentals/01-Theory/05-Parameter_Estimation/: README.md
00-LLM_Fundamentals/01-Theory/Dataset_Types/: README.md  dataset_analyzer.py
00-LLM_Fundamentals/01-Theory/Evaluation_Metrics/: README.md
00-LLM_Fundamentals/01-Theory/LLM_Lifecycle/: README.md  lifecycle_demo.py
00-LLM_Fundamentals/01-Theory/Parameter_Estimation/: README.md
00-LLM_Fundamentals/01-Theory/Quantization_Landscape/: README.md
00-LLM_Fundamentals/02-Labs/Lab-0.1-Model_Lifecycle_Demo/: README.md  lifecycle_lab.py
00-LLM_Fundamentals/02-Labs/Lab-0.2-Evaluation_Benchmark/: README.md  benchmark_lab.py  evaluation_toolkit.py
00-LLM_Fundamentals/02-Labs/Lab-0.3-Dataset_Analysis/: README.md  analysis_lab.py  dataset_analyzer.py
00-LLM_Fundamentals/02-Labs/Lab-0.4-Quantization_Comparison/: README.md  comparison_lab.py  quantization_demo.py
00-LLM_Fundamentals/02-Labs/Lab-0.5-Parameter_Calculator/: README.md  calculator_lab.py  parameter_calculator.py
00-LLM_Fundamentals/02-Labs/Lab-0.6-Model_Compression_Engineering/: MODEL_COMPRESSION_ENGINEERING.md  README.md  compression_lab.py
00-LLM_Fundamentals/utils/: __init__.py  model_utils.py
01-Core_Training_Techniques/: LEARNING_PATH.md
01-Core_Training_Techniques/01-Theory/: 1.1-PEFT.md  1.2-Distributed_Training.md  1.3-Optimization_and_Alignment.md
01-Core_Training_Techniques/02-Labs/Lab-1.1-PEFT_with_HuggingFace/: 01-environment-setup.ipynb  02-load-model-and-dataset.ipynb  03-apply-lora.ipynb  04-inference-and-evaluation.ipynb  05-merge-and-save.ipynb  README.md
01-Core_Training_Techniques/02-Labs/Lab-1.2-PyTorch_DDP_Basics/: 01-Setup.ipynb  02-Train.ipynb  03-Optimization.ipynb  README.md
01-Core_Training_Techniques/02-Labs/Lab-1.3-Finetune_Alpaca_with_DeepSpeed/: README.md
01-Core_Training_Techniques/02-Labs/Lab-1.4-Training_Optimization_Basics/: 01-Mixed_Precision.ipynb  02-Gradient_Accumulation.ipynb  03-Gradient_Checkpointing.ipynb  04-Memory_Profiling.ipynb  README.md
01-Core_Training_Techniques/02-Labs/Lab-1.5-FlashAttention_Deep_Dive/: 01-Setup_and_Comparison.ipynb  02-FlashAttention_Demo.ipynb  03-Long_Sequence_Training.ipynb  04-Performance_Analysis.ipynb  05-Precision_Analysis.ipynb  README.md
01-Core_Training_Techniques/02-Labs/Lab-1.6-Efficient_Attention_MQA_GQA/: 01-Setup.ipynb  02-MQA_Implementation.ipynb  03-GQA_Implementation.ipynb  04-Inference_Optimization.ipynb  README.md
01-Core_Training_Techniques/02-Labs/Lab-1.7-DPO_Alignment/: 01-Setup_and_Data.ipynb  02-SFT_Baseline.ipynb  03-DPO_Training.ipynb  04-Evaluation_and_Compare.ipynb  README.md
01-Core_Training_Techniques/02-Labs/Lab-1.8-ORPO_Alignment/: 01-Setup.ipynb  02-ORPO_Training.ipynb  03-Compare_with_DPO.ipynb  04-Production_Deploy.ipynb  README.md
01-Core_Training_Techniques/02-Labs/PEFT_Labs/: README.md
01-Core_Training_Techniques/Distributed_Training_Labs/Lab-00-Fundamentals_of_Parallelism/: README.md
01-Core_Training_Techniques/Distributed_Training_Labs/Lab-01-Single_Node_Multi_GPU_DP_DDP/: README.md
01-Core_Training_Techniques/Distributed_Training_Labs/Lab-02-Distributed_Concepts/: README.md
01-Core_Training_Techniques/Distributed_Training_Labs/Lab-03-Multi_Node_Multi_GPU_DDP/: README.md
01-Core_Training_Techniques/Distributed_Training_Labs/Lab-04-Consensus_Problem/: README.md
01-Core_Training_Techniques/Distributed_Training_Labs/Lab-05-Communication_Optimization/: README.md
01-Core_Training_Techniques/Distributed_Training_Labs/Lab-06-Model_Parallelism/: README.md
01-Core_Training_Techniques/Distributed_Training_Labs/Lab-07-Parallelism_Summary/: README.md
01-PyTorch_Basics/: README.md  check_cuda_setup.py  check_gpu.py
02-Efficient_Inference_and_Serving/: CHAPTER_02_STATUS.md  CHAPTER_02_TRITON_STATUS.md  LEARNING_PATH.md  NEW_DESIGN_TRITON.md  QUICKSTART.md
02-Efficient_Inference_and_Serving/01-Theory/: 2.1-Inference_Engines.md  2.2-Serving_and_Optimization.md  llm_inference_metrics.md
02-Efficient_Inference_and_Serving/02-Labs/: README.md
03-Model_Compression/: CHAPTER_03_STATUS.md  DEVELOPMENT_PLAN.md  LEARNING_PATH.md  WRITING_STYLE_GUIDE.md
03-Model_Compression/01-Theory/: 3.1-Quantization.md  3.1-Quantization_Fundamentals.md  3.2-Pruning.md  3.2-Pruning_and_Sparsity.md  3.3-Knowledge_Distillation.md  3.3-Knowledge_Distillation_and_Architecture_Optimization.md
03-Model_Compression/02-Labs/: README.md
03-Model_Compression/02-Labs/Lab-3.2-Pruning_with_Wanda/: 01-Setup.ipynb  (+4 more)
04-Evaluation_and_Data_Engineering/: DEVELOPMENT_PLAN.md  LEARNING_PATH.md  WRITING_STYLE_GUIDE.md
04-Evaluation_and_Data_Engineering/01-Theory/: 4.1-Evaluation_Benchmarks.md  4.2-Data_Engineering.md
common_utils/: README.md  __init__.py  data_loaders.py  model_helpers.py  training_helpers.py  visualization.py
docs/: README.md  chapter_02_wbs_plan.md  cross_platform_testing_plan.md  index.html  lab_quality_audit_report.md  next_tasks_plan.md  next_tasks_roadmap.md  peft_lab_quality_standards.md  peft_labs_quality_audit_final.md  project_dev_wbs.md  project_status_report.md  roadmap_design_principles.md  sitemap.xml  theoretical_roadmap_design.md  theory_node_template.md  training_optimization_completion_summary.md  unified_quality_summary.md  visualization_integration_guide.md
docs/css/: style.css
docs/faq/: index.html
docs/js/: main.js
docs/labs/: index.html
docs/modules/: compression.html  evaluation.html  fundamentals.html  inference.html  training.html
docs/setup/: environment.html
(+128 files in other folders)
