[tool.poetry]
name = "llm-engineering-course"
version = "0.2.0"
description = "Environment setup for the Advanced LLM Engineering Course - with Training Optimization & Inference"
authors = ["LLM Teaching Project Team <noreply@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"

# PyTorch with CUDA 12.1
torch = {version = "^2.5.1", source = "pytorch-cu121"}
torchvision = {version = "^0.20.1", source = "pytorch-cu121"}
torchaudio = {version = "^2.5.1", source = "pytorch-cu121"}

# Core Libraries
datasets = ">=2.14.0"
accelerate = ">=0.24.0"

# Inference & Serving
fastapi = ">=0.104.0"
uvicorn = ">=0.24.0"

# Data & Utility
numpy = ">=1.24.0"
pandas = ">=2.0.0"
scikit-learn = ">=1.3.0"

# Development tools
jupyterlab = "^4.4.9"
ipywidgets = "^8.1.7"
matplotlib = "^3.10.6"
seaborn = "^0.13.2"
tqdm = "^4.67.1"

# Transformers and PEFT
transformers = "^4.57.0"
peft = ">=0.7.0"
bitsandbytes = ">=0.48.1"
sentencepiece = ">=0.2.1"
protobuf = ">=3.20.0"

# Jupyter kernel
ipykernel = "^6.29.0"

# Optional dependencies
vllm = {version = ">=0.6.0", optional = true}
flash-attn = {version = ">=2.7.0", optional = true}

[tool.poetry.extras]
inference = ["vllm"]
flash-attention = ["flash-attn"]
all = ["vllm", "flash-attn"]

[[tool.poetry.source]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
